<resources>
    <string name="app_name">BMI native Kotlin</string>
    <string name="title">IMC</string>
    <string name="alturaHint">Altura</string>
    <string name="pesoHint">Peso</string>
    <string name="calcluarButton">CALCULAR</string>
    <string name="bmi_table_header">IMC</string>
    <string name="bmi_table_header_class">Classificação</string>
    <string name="bmi_table_1">&lt; 18,5</string>
    <string name="bmi_table_2">18,5 a 24,9</string>
    <string name="bmi_table_3">25,0 a 29,9</string>
    <string name="bmi_table_4">30,0 a 34,9</string>
    <string name="bmi_table_5">35,0 a 39,9</string>
    <string name="bmi_table_6">> 40,0</string>
    <string name="bmi_table_1_class">Magreza</string>
    <string name="bmi_table_2_class">Saudável</string>
    <string name="bmi_table_3_class">Sobrepeso</string>
    <string name="bmi_table_4_class">Obesidade Grau I</string>
    <string name="bmi_table_5_class">Obesidade Severa Grau II</string>
    <string name="bmi_table_6_class">Obesidade Mórbida Grau III</string>
</resources>